<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
     android:layout_width="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="Red Hood image"
            app:srcCompat="@drawable/ic_red_hood_logo" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-black"
            android:includeFontPadding="false"
            android:lineHeight="30dp"
            android:text="@string/home_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_origWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/word_hint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColorHighlight="@color/red"
            android:textColorLink="@color/red"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_transWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/translation_hint"
            android:inputType="textPersonName"
            android:outlineAmbientShadowColor="@color/red"
            android:padding="12dp"
            android:textColorLink="@color/red"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/red"
            android:text="@string/add_btn"
            android:textSize="17sp" />
        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/black"
            android:text="@string/from_photo_btn"
            android:textSize="17sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>